# horizon-database

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: benchmarks.rs
docs/: architecture.md  benchmarks.md  phases.md
src/: lib.rs
src/btree/: mod.rs
src/buffer/: mod.rs
src/catalog/: mod.rs
src/cli/: main.rs
src/error/: mod.rs
src/execution/: fts5.rs  json.rs  mod.rs  rtree.rs  views_triggers.rs
src/mvcc/: mod.rs
src/pager/: mod.rs
src/planner/: mod.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs
src/types/: mod.rs
src/wal/: mod.rs
tests/: integration.rs
